--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "node app.js",
     "server": "nodemon app.js",
     "frontend": "npm start frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
