ready to deploy

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node": "18.13.0",
-    "npm": "8.19.3"
+    "node": ">=18.13.0",
+    "npm": ">=8.19.3"
   }
   
 }
