--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "server": "nodemon app.js",
-    "frontend": "npm start frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "postinstall": "npm install --prefix client && npm run build --prefix client"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
